add pekko-quartz-scheduler config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,13 @@
 # https://www.playframework.com/documentation/latest/Configuration
+pekko {
+  quartz {
+    schedules {
+      Every5Seconds {
+        description = "5秒ごとに実行"
+        expression = "*/5 * * ? * *"
+      }
+    }
+  }
+}
+
+play.modules.enabled += "scheduler.SampleActorModule"
