--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,4 +10,5 @@ pekko {
   }
 }
 
-play.modules.enabled += "scheduler.SampleActorModule"
+# play.modules.enabled += "scheduler.SampleActorModule"
+play.modules.enabled += "scheduler.StatefulClassicActorModule"
