add StatefulTypedActor config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,4 +11,5 @@ pekko {
 }
 
 # play.modules.enabled += "scheduler.SampleActorModule"
-play.modules.enabled += "scheduler.StatefulClassicActorModule"
+# play.modules.enabled += "scheduler.StatefulClassicActorModule"
+play.modules.enabled += "scheduler.StatefulTypedActorModule"
