add wrong parent-child actors config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,4 +12,5 @@ pekko {
 
 # play.modules.enabled += "scheduler.SampleActorModule"
 # play.modules.enabled += "scheduler.StatefulClassicActorModule"
-play.modules.enabled += "scheduler.StatefulTypedActorModule"
+# play.modules.enabled += "scheduler.StatefulTypedActorModule"
+play.modules.enabled += "scheduler.WrongActorModule"
