--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,4 +13,5 @@ pekko {
 # play.modules.enabled += "scheduler.SampleActorModule"
 # play.modules.enabled += "scheduler.StatefulClassicActorModule"
 # play.modules.enabled += "scheduler.StatefulTypedActorModule"
-play.modules.enabled += "scheduler.WrongActorModule"
+# play.modules.enabled += "scheduler.WrongActorModule"
+play.modules.enabled += "scheduler.ParentActorModule"
