add improved parent child actor config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,4 +14,5 @@ pekko {
 # play.modules.enabled += "scheduler.StatefulClassicActorModule"
 # play.modules.enabled += "scheduler.StatefulTypedActorModule"
 # play.modules.enabled += "scheduler.WrongActorModule"
-play.modules.enabled += "scheduler.ParentActorModule"
+# play.modules.enabled += "scheduler.ParentActorModule"
+play.modules.enabled += "scheduler.ImprovedParentActorModule"
